--- a/catalog.html
+++ b/catalog.html
@@ -267,7 +267,7 @@
         <h2 class="visually-hidden">Каталог продукции.</h2>
         <ul class="product-list">
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое малинка." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/raspberry.png" width="168" height="168"
                 alt="ярко-красный шарик мороженого.">
               <h3 class="icecream-name">Малинка</h3>
@@ -281,7 +281,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое фисташка." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/phistachio.png" width="168" height="168"
                 alt="фисташковое мороженое с шоколадной крошкой.">
               <h3 class="icecream-name">Фисташка</h3>
@@ -295,7 +295,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое черника." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/blueberry.png" width="168" height="168"
                 alt="шарик крем-брюле с прослойкой черничного джема.">
               <h3 class="icecream-name">Черника</h3>
@@ -309,7 +309,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое бабл-гам." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/bubble-gum.png" width="168" height="168"
                 alt="Шарик мороженого голубого цвета с разноцветной крошкой.">
               <h3 class="icecream-name">Бабл-гам</h3>
@@ -323,7 +323,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое ежевика." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/blackberry.png" width="168" height="168"
                 alt="нежный пломбир с ежевикой.">
               <h3 class="icecream-name">Ежевика</h3>
@@ -337,7 +337,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое банан." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/banana.png" width="168" height="168"
                 alt="легкое мороженое с бананом.">
               <h3 class="icecream-name">Банан</h3>
@@ -351,7 +351,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое шоколадка." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/chocolate.png" width="168" height="168"
                 alt="стандартное шоколадное мороженое.">
               <h3 class="icecream-name">Шоколадка</h3>
@@ -365,7 +365,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое клубничка." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/strawberry.png" width="168" height="168"
                 alt="пломбир с клубничкой.">
               <h3 class="icecream-name">Клубничка</h3>
@@ -379,7 +379,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое лимон." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/lemon.png" width="168" height="168"
                 alt="мроженое с терпким лимонным вкусом.">
               <h3 class="icecream-name">Лимон</h3>
@@ -393,7 +393,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое ментол." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/menthol.png" width="168" height="168"
                 alt="мороженое с приятным холодком.">
               <h3 class="icecream-name">Ментол</h3>
@@ -407,7 +407,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое орешек." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/nut.png" width="168" height="168"
                 alt="пломбир в сочетании с фисташкой.">
               <h3 class="icecream-name">Орешек</h3>
@@ -421,7 +421,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое крем-брюле." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/creme.png" width="168" height="168"
                 alt="сладкое мороженое без лишнего.">
               <h3 class="icecream-name">Крем-брюле</h3>
@@ -444,19 +444,19 @@
           </button>
           <ul class="pagination-list">
             <li class="pagination-item">
-              <a class="pagination-link" href="#">1</a>
+              <a aria-label="первая страница."class="pagination-link" href="#">1</a>
             </li>
             <li class="pagination-item">
-              <a class="pagination-link" href="#">2</a>
+              <a aria-label="вторая страница." class="pagination-link" href="#">2</a>
             </li>
             <li class="pagination-item">
-              <a class="pagination-link active" href="#">3</a>
+              <a aria-label="третья страница." class="pagination-link active" href="#">3</a>
             </li>
             <li class="pagination-item">
-              <a class="pagination-link" href="#">4</a>
+              <a aria-label="четвертая страница." class="pagination-link" href="#">4</a>
             </li>
             <li class="pagination-item">
-              <a class="pagination-link" href="#">5</a>
+              <a aria-label="пятая страница."class="pagination-link" href="#">5</a>
             </li>
           </ul>
           <button class="pagination-button pagination-button-next" type="button">
