--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   <img class="busket-product-image" src="/images/raspberry-mini.png" alt="яркое малиновое мороженое."
                     width="46" height="46">
                   <div class="busket-product-content">
-                    <a class="busket-product-tittle" href="#">Малинка</a>
+                    <a aria-label="мороженое малинка." class="busket-product-tittle" href="#">Малинка</a>
                     <p class="busket-product-info">1 кг х 310 ₽</p>
                   </div>
                   <p class="busket-product-price">310 ₽</p>
@@ -118,7 +118,7 @@
                   <img class="busket-product-image" src="/images/bubblegum-mini.png"
                     alt="мороженое небесного цвета с посыпкой." width="46" height="46">
                   <div class="busket-product-content">
-                    <a class="busket-product-tittle" href="#">Бабл-гам</a>
+                    <a aria-label="мороженое бабл-гам." class="busket-product-tittle" href="#">Бабл-гам</a>
                     <p class="busket-product-info">1,5 кг х 320 ₽</p>
                   </div>
                   <p class="busket-product-price">480 ₽</p>
@@ -296,7 +296,7 @@
         <h2 class="tittle most-popular-tittle">Попробуйте самые популярные<br> вкусы нашего мороженого</h2>
         <ul class="product-list">
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое малинка." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/raspberry.png" alt="ярко-красный шарик мороженого."
                 width="168" height="168">
               <h3 class="icecream-name">Малинка</h3>
@@ -310,7 +310,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое фисташка." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/phistachio.png"
                 alt="фисташковое мороженое с шоколадной крошкой." width="168" height="168">
               <h3 class="icecream-name">Фисташка</h3>
@@ -324,7 +324,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое черника." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/blueberry.png"
                 alt="Шарик Крем-брюле с прослойкой черничного джема." width="168" height="168">
               <h3 class="icecream-name">Черника</h3>
@@ -338,7 +338,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <a class="product-link" href="#">
+            <a aria-label="мороженое бабл-гам." class="product-link" href="#">
               <img class="icecream-image" src="/images/catalog/bubble-gum.png"
                 alt="Шарик мороженого голубого цвета с разноцветной крошкой." width="168" height="168">
               <h3 class="icecream-name">Бабл-гам</h3>
@@ -387,7 +387,7 @@
       <div class="info content-wrapper news-wrapper">
         <div class="news blog">
           <p class="blog-tittle">Новое в нашем блоге</p>
-          <a class="info-link" href="">
+          <a aria-label="ссылка на блог." class="info-link" href="">
             <p class="blog-text">10 способов сервировки<br> фруктовых щербетов<br> к столу</p>
           </a>
         </div>
