--- a/catalog.html
+++ b/catalog.html
@@ -427,7 +427,7 @@
                 <img class="icecream-image" src="/images/catalog/creme.png" width="168" height="168"
                   alt="сладкое мороженое без лишнего.">
                 <h3 class="icecream-name">Крем-брюле</h3>
-                <p class="icecream-text">Классическое крем-брюле</p>
+                <p class="icecream-text">Классическое<br> крем-брюле</p>
               </a>
               <div class="price-wrapper">
                 <span class="product-price">280 ₽/кг</span>
