--- a/catalog.html
+++ b/catalog.html
@@ -71,7 +71,7 @@
 
               <div class="header-popap header-popap-auth">
                 <p class="header-popap-tittle">Личный кабинет</p>
-                <form class="header-popap-form" action="https://echo.htmlacademy.ru" method="get">
+                <form class="header-popap-form" action="https://echo.htmlacademy.ru" method="post">
                   <div class="header-popap-form-wrapper">
                     <label class="visually-hidden" for="header-email">поле ввода электронной почты.</label>
                     <input class="header-popap-input delivery-input popap-email-input" name="email" id="header-email"
