--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
               <div class="header-popap header-popap-auth">
                 <p class="header-popap-tittle">Личный кабинет</p>
-                <form class="header-popap-form" action="https://echo.htmlacademy.ru" method="get">
+                <form class="header-popap-form" action="https://echo.htmlacademy.ru" method="post">
                   <div class="header-popap-form-wrapper">
                     <label class="visually-hidden" for="header-email">поле ввода электронной почты.</label>
                     <input class="header-popap-input delivery-input popap-email-input" name="email" id="header-email"
@@ -397,7 +397,7 @@
               в курсе всего самого вкусного, что у нас происходит. Обещаем<br> не спамить и не слать всякой ненужной
               ерунды.
               Честно =)</p>
-            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="get">
+            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden" for="newsletter-email">Email</label>
               <input class="email-input delivery-input" type="email" placeholder="email@example.com"
                 name="newsletter-email" id="newsletter-email" required>
@@ -413,7 +413,7 @@
               доставку мороженого на
               дом, и курьер привезёт вам ваш заказ в течение часа!</p>
           </div>
-          <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="get">
+          <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="delivery-form-text">Укажите адрес и дату доставки, и мы свяжемся<br> с вами, чтобы подтвердить
               заказ.</p>
             <div class="delivery-input-wrapper">
@@ -524,7 +524,7 @@
             <span class="visually-hidden">Закрыть окно.</span>
           </button>
           <h2 class="modal-tittle">Мы обязательно ответим вам!</h2>
-          <form class="modal-form" action="https://echo.htmlacademy.ru" method="get">
+          <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
             <label class="visually-hidden" for="name">Поле ввода имени и фамилии.</label>
             <input class="delivery-input modal-input" id="name" name="name" type="text" placeholder="Имя и фамилия"
               required>
